--- a/assets/style.css
+++ b/assets/style.css
@@ -82,8 +82,8 @@ body {
 }
 
 footer {
-    background-color: black;
-    color: white;
+    background-color: purplle;
+    color: black;
     position: fixed;
     bottom: 0;
     width: 100%;
